--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,6 +24,26 @@ main{
 .carousel-control-next-icon{
     filter: none !important;
 }
+.grillita{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 250px;
+    padding: 100px 0;
+}
+.box:nth-child(1){
+   grid-row: 1/3;
+}
+.box:nth-child(2){
+    grid-column: 2/4;
+}
+.box:nth-child(3){
+    grid-column: 2/3;
+}
+.box:nth-child(4){
+    grid-column: 3/4;
+}
 @media (min-width: 768px) and (max-width: 991px){
     .img-carousel-crypto{
         height: 350px;
